Completely revamp site using wurmforge

--- a/blak/index.html
+++ b/blak/index.html
@@ -2,7 +2,7 @@
 <html lang="en"><head>
   <meta charset="utf-8"/>
 
-  <title>BlakWurm - Home</title>
+  <title>BlakWurm - Blak</title>
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
 
   <link href="/css/main.css" rel="stylesheet"/>
@@ -16,16 +16,15 @@
 			<p class="sitetagline">We Breath Entertainment</p>
 		</a>
 		<div class="navbar">
-			<ul><li><a href="/blak">Blak</a></li><li><a href="/wurm">Wurm</a></li><li><a href="/foo_writes">Foo's blog about bar</a></li></ul>
+			<ul><li class="hello"><a href="/blak">Blak</a></li><li><a href="/wurm">Wurm</a></li><li><a href="/foo_writes">Foo's blog about bar</a></li></ul>
 		</div>
 
 	</div>
 	<div id="pagemain">
-		<h2 class="pagetitle">Home</h2>	
-		<p class="pagesubtitle">Who We Are And What You Do</p>
-		<div class="pagecontent"><span class="mdrender"><h1>Testing this out, man</h1>
-<p>This is a testing site. What we do here? Test things out. Why we do here? Because yes.</p>
-<p>Enjoy the ride, mate!  </p></span></div>
+		<h2 class="pagetitle">Blak</h2>	
+		<p class="pagesubtitle">Dark as Night</p>
+		<div class="pagecontent"><span class="mdrender"><h1>Blak</h1>
+<p><img class="profilepic" href="/media/blak.png"/> Dude knows what's up! This describes the dude in all his glory!  </p></span></div>
 	</div>
 	<div id="footer">
 		<p class="copyright">(c) 2018 BlakWurm</p>
