--- a/wurm/index.html
+++ b/wurm/index.html
@@ -2,7 +2,7 @@
 <html lang="en"><head>
   <meta charset="utf-8"/>
 
-  <title>BlakWurm - Home</title>
+  <title>BlakWurm - Wurm</title>
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
 
   <link href="/css/main.css" rel="stylesheet"/>
@@ -16,16 +16,21 @@
 			<p class="sitetagline">We Breath Entertainment</p>
 		</a>
 		<div class="navbar">
-			<ul><li><a href="/blak">Blak</a></li><li><a href="/wurm">Wurm</a></li><li><a href="/foo_writes">Foo's blog about bar</a></li></ul>
+			<ul><li><a href="/blak">Blak</a></li><li class="hello"><a href="/wurm">Wurm</a></li><li><a href="/foo_writes">Foo's blog about bar</a></li></ul>
 		</div>
 
 	</div>
 	<div id="pagemain">
-		<h2 class="pagetitle">Home</h2>	
-		<p class="pagesubtitle">Who We Are And What You Do</p>
-		<div class="pagecontent"><span class="mdrender"><h1>Testing this out, man</h1>
-<p>This is a testing site. What we do here? Test things out. Why we do here? Because yes.</p>
-<p>Enjoy the ride, mate!  </p></span></div>
+		<h2 class="pagetitle">Wurm</h2>	
+		<p class="pagesubtitle">Slithering between the lines</p>
+		<div class="pagecontent"><span class="mdrender"><p>Alex is a neat dude! At least I think so. But I'm him, so I'm a liiiiitle bit biased.</p>
+<p>Here, have some raw HTML</p>
+<table>  
+  <tbody><tr>
+    <td>fooooooo</td>
+    <td>wump!</td>
+  </tr>
+</tbody></table></span></div>
 	</div>
 	<div id="footer">
 		<p class="copyright">(c) 2018 BlakWurm</p>
