Minor change to home page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en"><head>
   <meta charset="utf-8"/>
 
-  <title>BlakWurm - Home</title>
+  <title>BlakWurm - Who We Are</title>
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
 
   <link href="/css/main.css" rel="stylesheet"/>
@@ -21,8 +21,8 @@
 
 	</div>
 	<div id="pagemain">
-		<h2 class="pagetitle">Home</h2>	
-		<p class="pagesubtitle">Who We Are And What You Do</p>
+		<h2 class="pagetitle">Who We Are</h2>	
+		<p class="pagesubtitle">And Why We Matter To You</p>
 		<div class="pagecontent"><span class="mdrender"><h1>Testing this out, man</h1>
 <p>This is a testing site. What we do here? Test things out. Why we do here? Because yes.</p>
 <p>Enjoy the ride, mate!  </p></span></div>
