Change around site settings somewhat

--- a/blak/index.html
+++ b/blak/index.html
@@ -16,13 +16,13 @@
 			<p class="sitetagline">We Breath Entertainment</p>
 		</a>
 		<div class="navbar">
-			<ul><li class="hello"><a href="/blak">Blak</a></li><li><a href="/wurm">Wurm</a></li><li><a href="/foo_writes">Foo's blog about bar</a></li></ul>
+			<ul><li class="hello"><a href="/blak">Blak</a></li><li><a href="/wurm">Wurm</a></li><li><a href="/wurmblog">WurmBlog</a></li></ul>
 		</div>
 
 	</div>
 	<div id="pagemain">
 		<h2 class="pagetitle">Blak</h2>	
-		<p class="pagesubtitle">Dark as Night</p>
+		<p class="pagesubtitle">The Soul of Creativity</p>
 		<div class="pagecontent"><span class="mdrender"><h1>Blak</h1>
 <p><img class="profilepic" href="/media/blak.png"/> Dude knows what's up! This describes the dude in all his glory!  </p></span></div>
 	</div>
