--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<p class="sitetagline">We Breath Entertainment</p>
 		</a>
 		<div class="navbar">
-			<ul><li><a href="/blak">Blak</a></li><li><a href="/wurm">Wurm</a></li><li><a href="/foo_writes">Foo's blog about bar</a></li></ul>
+			<ul><li><a href="/blak">Blak</a></li><li><a href="/wurm">Wurm</a></li><li><a href="/wurmblog">WurmBlog</a></li></ul>
 		</div>
 
 	</div>
