--- a/wurm/index.html
+++ b/wurm/index.html
@@ -16,13 +16,13 @@
 			<p class="sitetagline">We Breath Entertainment</p>
 		</a>
 		<div class="navbar">
-			<ul><li><a href="/blak">Blak</a></li><li class="hello"><a href="/wurm">Wurm</a></li><li><a href="/foo_writes">Foo's blog about bar</a></li></ul>
+			<ul><li><a href="/blak">Blak</a></li><li class="hello"><a href="/wurm">Wurm</a></li><li><a href="/wurmblog">WurmBlog</a></li></ul>
 		</div>
 
 	</div>
 	<div id="pagemain">
 		<h2 class="pagetitle">Wurm</h2>	
-		<p class="pagesubtitle">Slithering between the lines</p>
+		<p class="pagesubtitle">Slithering Amongst the Bits</p>
 		<div class="pagecontent"><span class="mdrender"><p>Alex is a neat dude! At least I think so. But I'm him, so I'm a liiiiitle bit biased.</p>
 <p>Here, have some raw HTML</p>
 <table>  
