Update profile pages

--- a/blak/index.html
+++ b/blak/index.html
@@ -23,8 +23,9 @@
 	<div id="pagemain">
 		<h2 class="pagetitle">Blak</h2>	
 		<p class="pagesubtitle">The Soul of Creativity</p>
-		<div class="pagecontent"><span class="mdrender"><h1>Blak</h1>
-<p><img class="profilepic" href="/media/blak.png"/> Dude knows what's up! This describes the dude in all his glory!  </p></span></div>
+		<div class="pagecontent"><span class="mdrender"><h2>Gavyn</h2>
+<p>Freelance writer, core "fluff" guy and QA manager with BlakWurm Entertainment</p>
+<p>You can find his blog at http://www.ivoryhawk.com/</p></span></div>
 	</div>
 	<div id="footer">
 		<p class="copyright">(c) 2018 BlakWurm</p>
