--- a/wurm/index.html
+++ b/wurm/index.html
@@ -23,14 +23,9 @@
 	<div id="pagemain">
 		<h2 class="pagetitle">Wurm</h2>	
 		<p class="pagesubtitle">Slithering Amongst the Bits</p>
-		<div class="pagecontent"><span class="mdrender"><p>Alex is a neat dude! At least I think so. But I'm him, so I'm a liiiiitle bit biased.</p>
-<p>Here, have some raw HTML</p>
-<table>  
-  <tbody><tr>
-    <td>fooooooo</td>
-    <td>wump!</td>
-  </tr>
-</tbody></table></span></div>
+		<div class="pagecontent"><span class="mdrender"><h1>Alex</h1>
+<p>Code Monkey. IT Wizard. Data Sorcerer.</p>
+<p>Blog at <a href="/wurmblog">WurmBlog</a>  </p></span></div>
 	</div>
 	<div id="footer">
 		<p class="copyright">(c) 2018 BlakWurm</p>
