--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 	<div id="pagemain">
 		<h2 class="pagetitle">Who We Are</h2>	
 		<p class="pagesubtitle">And Why We Matter To You</p>
-		<div class="pagecontent"><span class="mdrender"><h1>Testing this out, man</h1>
-<p>This is a testing site. What we do here? Test things out. Why we do here? Because yes.</p>
-<p>Enjoy the ride, mate!  </p></span></div>
+		<div class="pagecontent"><span class="mdrender"><p>We love entertainment.</p>
+<p>We create tools to help people enjoy their entertainment.</p>
+<p>We believe that by doing this, we are helping create a better world.</p></span></div>
 	</div>
 	<div id="footer">
 		<p class="copyright">(c) 2018 BlakWurm</p>
