Add the new theme

--- a/wurm/index.html
+++ b/wurm/index.html
@@ -7,30 +7,35 @@
 
   <link href="/css/main.css" rel="stylesheet"/>
 
+  <script src="/js/main.js"></script>
 </head>
 
 <body>
-	<div id="header">
-		<a class="rootlink" href="/">
-			<h1 class="sitetitle">BlakWurm</h1>
-			<p class="sitetagline">We Breath Entertainment</p>
-		</a>
-		<div class="navbar">
-			<ul><li><a href="/blak">Blak</a></li><li class="hello"><a href="/wurm">Wurm</a></li><li><a href="/wurmblog">WurmBlog</a></li></ul>
-		</div>
-
+		
+	<h1 class="sitetitle"><a class="rootlink" href="/">BlakWurm</a></h1>
+	<p class="sitetagline">We Breath Entertainment</p>
+	<div class="navbar">
+		<ul><li><a href="/blak">Blak</a></li><li class="hello"><a href="/wurm">Wurm</a></li><li><a href="/wurmblog">WurmBlog</a></li></ul>
 	</div>
-	<div id="pagemain">
-		<h2 class="pagetitle">Wurm</h2>	
-		<p class="pagesubtitle">Slithering Amongst the Bits</p>
-		<div class="pagecontent"><span class="mdrender"><h1>Alex</h1>
+
+	<h2 class="pagetitle">Wurm</h2>	
+	<p class="pagesubtitle">Slithering Amongst the Bits</p>
+	<div class="pagecontent"><span class="mdrender"><h1>Alex</h1>
 <p>Code Monkey. IT Wizard. Data Sorcerer.</p>
 <p>Blog at <a href="/wurmblog">WurmBlog</a>  </p></span></div>
-	</div>
-	<div id="footer">
-		<p class="copyright">(c) 2018 BlakWurm</p>
-	</div>
-  <script src="/js/main.js" type="module"></script>
+	<p class="copyright">(c) 2018 BlakWurm</p>
+	<ul class="themepicker">
+		<li><a onclick="changeTheme('default')">SNES Default</a></li>
+		<li><a onclick="changeTheme('zelda')">Zelda</a></li>
+		<li><a onclick="changeTheme('pokemon')">Pokemon</a></li>
+		<li><a onclick="changeTheme('green')">IRL</a></li>
+		<li><a onclick="changeTheme('pocket')">GB Pocket</a></li>
+		<li><a onclick="changeTheme('megaman')">Megaman V</a></li>
+		<li><a onclick="changeTheme('metroid')">Metroid 2</a></li>
+		<li><a onclick="changeTheme('kirby')">Kirby</a></li>
+		<li><a onclick="changeTheme('icarus')">Icarus</a></li>
+		<li><a onclick="changeTheme('mario')">Super Mario Land 2</a></li>
+	</ul>
 
 
 </body></html>
