Add responsive site stuff

--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
 <p>We believe that by doing this, we are helping create a better world.</p></span></div>
 	<p class="copyright">(c) 2018 BlakWurm</p>
 	<ul class="themepicker">
-		<li><a onclick="changeTheme('default')">SNES Default</a></li>
-		<li><a onclick="changeTheme('zelda')">Zelda</a></li>
-		<li><a onclick="changeTheme('pokemon')">Pokemon</a></li>
-		<li><a onclick="changeTheme('green')">IRL</a></li>
-		<li><a onclick="changeTheme('pocket')">GB Pocket</a></li>
-		<li><a onclick="changeTheme('megaman')">Megaman V</a></li>
-		<li><a onclick="changeTheme('metroid')">Metroid 2</a></li>
-		<li><a onclick="changeTheme('kirby')">Kirby</a></li>
-		<li><a onclick="changeTheme('icarus')">Icarus</a></li>
-		<li><a onclick="changeTheme('mario')">Super Mario Land 2</a></li>
+		<li class="default"><a onclick="changeTheme('default')">SNES Default</a></li>
+		<li class="zelda"><a onclick="changeTheme('zelda')">Zelda</a></li>
+		<li class="pokemon"><a onclick="changeTheme('pokemon')">Pokemon</a></li>
+		<li class="green"><a onclick="changeTheme('green')">IRL</a></li>
+		<li class="pocket"><a onclick="changeTheme('pocket')">GB Pocket</a></li>
+		<li class="megaman"><a onclick="changeTheme('megaman')">Megaman V</a></li>
+		<li class="metroid"><a onclick="changeTheme('metroid')">Metroid 2</a></li>
+		<li class="kirby"><a onclick="changeTheme('kirby')">Kirby</a></li>
+		<li class="icarus"><a onclick="changeTheme('icarus')">Icarus</a></li>
+		<li class="mario"><a onclick="changeTheme('mario')">Super Mario Land 2</a></li>
 	</ul>
 
 
