Make the template awesome

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 		
 	<h1 class="sitetitle"><a class="rootlink" href="/">BlakWurm</a></h1>
-	<p class="sitetagline">We Breath Entertainment</p>
+	<p class="sitetagline">We Breathe Entertainment</p>
 	<div class="navbar">
 		<ul><li><a href="/blak">Blak</a></li><li><a href="/wurm">Wurm</a></li><li><a href="/wurmblog">WurmBlog</a></li></ul>
 	</div>
