--- a/blak/index.html
+++ b/blak/index.html
@@ -5,13 +5,13 @@
   <title>BlakWurm - Blak</title>
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
 
+  <link href="https://fontlibrary.org/face/meyrin" media="screen" rel="stylesheet" type="text/css"/>
   <link href="/css/main.css" rel="stylesheet"/>
 
-  <script src="/js/main.js"></script>
 </head>
 
 <body>
-		
+	<canvas height="100" id="maskcanvas" width="100"></canvas>	
 	<h1 class="sitetitle"><a class="rootlink" href="/">BlakWurm</a></h1>
 	<p class="sitetagline">We Breathe Entertainment</p>
 	<div class="navbar">
@@ -20,10 +20,11 @@
 
 	<h2 class="pagetitle">Blak</h2>	
 	<p class="pagesubtitle">The Soul of Creativity</p>
-	<div class="pagecontent"><span class="mdrender"><h2>Gavyn</h2>
-<p>Freelance writer, core "fluff" guy and QA manager with BlakWurm Entertainment</p>
+	<div class="pagecontent"><span class="mdrender"><p>Gavyn is a freelance writer, currently working on the Lone Wolf series as a team author.</p>
+<p>A Blakwurm, he's the community manager and lead QA tester.</p>
 <p>You can find his blog at http://www.ivoryhawk.com/</p></span></div>
-	<p class="copyright">(c) 2018 BlakWurm</p>
+	<p class="copyright">(c) 2019 BlakWurm</p>
+  <script src="/js/main.js" type="module"></script>
 
 
 </body></html>
