--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <title>BlakWurm - Who We Are</title>
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
 
+  <link href="https://fontlibrary.org/face/meyrin" media="screen" rel="stylesheet" type="text/css"/>
   <link href="/css/main.css" rel="stylesheet"/>
 
-  <script src="/js/main.js"></script>
 </head>
 
 <body>
-		
+	<canvas height="100" id="maskcanvas" width="100"></canvas>	
 	<h1 class="sitetitle"><a class="rootlink" href="/">BlakWurm</a></h1>
 	<p class="sitetagline">We Breathe Entertainment</p>
 	<div class="navbar">
@@ -20,10 +20,18 @@
 
 	<h2 class="pagetitle">Who We Are</h2>	
 	<p class="pagesubtitle">And Why We Matter To You</p>
-	<div class="pagecontent"><span class="mdrender"><p>We love entertainment.</p>
-<p>We create tools to help people enjoy their entertainment.</p>
-<p>We believe that by doing this, we are helping create a better world.</p></span></div>
-	<p class="copyright">(c) 2018 BlakWurm</p>
+	<div class="pagecontent"><span class="mdrender"><p>Entertainment is Important. Capital-I Important. The entertainment we create gives the audience<br/>
+a window into how we see the world on a fundimental level. The entertainment we consume moulds our minds and shapes our hearts,<br/>
+and directly influences how we relate to others and act upon the world. Perhaps this is why we've seen, time and again, technological and social advances<br/>
+that mimic entertainment that came before. Maybe this is why propaganda made using entertainment methods and techology<br/>
+have been so effective at helping to win wars... and helping at propagating some of the worst travesties in human history. Fortunately<br/>
+entertainment, properly recorded, is durable and persistent, and the entertainment of the past is essential when trying<br/>
+to understand those who came before us. So, too, will the entertainment of the present be essential for understanding <em>us</em>.</p>
+<p>BlakWurm Entertainment is dedicated to helping people create and consume entertainment. Currently, we're working on several<br/>
+RPG-related projects, which will help small groups of friends more efficiently experience each other's imaginations and<br/>
+creations.</p></span></div>
+	<p class="copyright">(c) 2019 BlakWurm</p>
+  <script src="/js/main.js" type="module"></script>
 
 
 </body></html>
