--- a/wurm/index.html
+++ b/wurm/index.html
@@ -5,13 +5,13 @@
   <title>BlakWurm - Wurm</title>
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
 
+  <link href="https://fontlibrary.org/face/meyrin" media="screen" rel="stylesheet" type="text/css"/>
   <link href="/css/main.css" rel="stylesheet"/>
 
-  <script src="/js/main.js"></script>
 </head>
 
 <body>
-		
+	<canvas height="100" id="maskcanvas" width="100"></canvas>	
 	<h1 class="sitetitle"><a class="rootlink" href="/">BlakWurm</a></h1>
 	<p class="sitetagline">We Breathe Entertainment</p>
 	<div class="navbar">
@@ -20,10 +20,10 @@
 
 	<h2 class="pagetitle">Wurm</h2>	
 	<p class="pagesubtitle">Slithering Amongst the Bits</p>
-	<div class="pagecontent"><span class="mdrender"><h1>Alex</h1>
-<p>Code Monkey. IT Wizard. Data Sorcerer.</p>
-<p>Blog at <a href="/wurmblog">WurmBlog</a>  </p></span></div>
-	<p class="copyright">(c) 2018 BlakWurm</p>
+	<div class="pagecontent"><span class="mdrender"><p>Alex is the technical mind behind BlakWurm Entertainment. He functions as a programming and design specialist.</p>
+<p>His blog is <a href="/wurmblog">WurmBlog</a>  </p></span></div>
+	<p class="copyright">(c) 2019 BlakWurm</p>
+  <script src="/js/main.js" type="module"></script>
 
 
 </body></html>
